// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Link > it works with defaults 1`] = `
<a
  class="_this_b26e6e _size-medium_b26e6e _family-sans_b26e6e _weight-regular_b26e6e _this_a14c64"
  data-testid="Link"
  href="#"
>
  Hello world
</a>
`;

exports[`Link > it works with sizes 1`] = `
<a
  class="_this_b26e6e _size-small_b26e6e _family-sans_b26e6e _weight-regular_b26e6e _this_a14c64"
  data-testid="Link"
  href="#"
>
  Hello world
</a>
`;

exports[`Link > it works with sizes 2`] = `
<a
  class="_this_b26e6e _size-medium_b26e6e _family-sans_b26e6e _weight-regular_b26e6e _this_a14c64"
  data-testid="Link"
  href="#"
>
  Hello world
</a>
`;

exports[`Link > it works with sizes 3`] = `
<a
  class="_this_b26e6e _size-large_b26e6e _family-sans_b26e6e _weight-regular_b26e6e _this_a14c64"
  data-testid="Link"
  href="#"
>
  Hello world
</a>
`;
